css/todo-cards.css
.idea-cards {
  border-bottom: 1px solid #d1d3d4;
  margin-bottom: 20px;
  max-width: 600px;
  padding-bottom: 15px;
  text-align: left;
  width: 100%;
}

.idea-cards-read {
  opacity: .3;
  background-color: ghostwhite;
}

.idea-title {
  color: #6d6e71;
  display: inline-block;
  font-weight: 700;
  margin-bottom: 10px;
  margin-left: 7px;
}

.delete-x {
  background-image: url(../img/delete.svg);
  background-repeat: no-repeat;
  display: inline-block;
  float: right;
  height: 20px;
  margin: 5px 5px 0 0;
  width: 29px;
}

.delete-x:hover {
  background-image: url(../img/delete-hover.svg);
}

.checkMark {
  text-align: center;
  border-radius: 100%;
  display: inline-block;
  color: #f1f1f1;
  font-size: 18px;
  width: 22px;
  height: 22px;
  line-height: 20px;
  border: 1px solid #c7b9b9;
  cursor: pointer;
}

.checkMark:hover {
  color: #00a79d;;
  border: 2px solid #00a79d;
}

.checkMarkActive {
  background-color: #00a79d;
  border: 2px solid #00a79d;
  color: white;
}

.idea-body {
  color: #939598;
  margin-bottom: 10px;
  margin-left: 35px;
}

.downvote,
.upvote {
  display: inline-block;
  float: left;
  height: 20px;
  margin: 5px 15px 0 0;
}

.upvote {
  background-image: url(../img/upvote.svg);
  background-position: center;
  background-repeat: no-repeat;
  background-size: 20px;
  height: 20px;
  width: 20px;
  z-index: 50;
  margin-left: 28px;
}

.upvote:hover {
  background-image: url(../img/upvote-hover.svg);
}

.downvote {
  background-image: url(../img/downvote.svg);
  background-position: center;
  background-repeat: no-repeat;
  background-size: 20px;
  height: 20px;
  width: 20px;
  z-index: 50;
}

.downvote:hover {
  background-image: url(../img/downvote-hover.svg);
}

.quality {
  color: #6d6e71;
  font-size: 15px;
  margin-top: 5px;
  text-align: left;
}

.icons {
  display: flex;
  justify-content: space-between;
}

.low {
  color: #d8cf59;
}

.normal {
  color: #ffa355;
}

.high {
  color: #d26d23;
}

.critical {
  color: #ff0000;
}

.flags svg {
  font-size: 1.4em;
}

.selected-flag {
  border: 2px solid #00a79c;
  border-radius: 5px;
  background-color: #eee;
  box-sizing: border-box;
}

